# mantle-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FIELD_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  Mantle_Assimilator.md  Mantle_Doctrine.md  Mantle_Extensions.md  Mantle_Organ_Atlas.md  Mantle_Organism_Lens.md  Mantle_PRIMER.md  Mantle_Part1_Body.md  Mantle_Part1_Body_Audit.md  Mantle_Part2_Mind.md  Mantle_Part2_Mind_Audit.md  Mantle_Positioning.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: audit.yml  demos.yml
docs/: Commandments.txt  MOLT_LEDGER.md  Mantle_Doctrine.md  Mantle_Extensions.md  Mantle_Grooves.md  Mantle_LLM_Pitfalls.md  Mantle_Organ_Atlas.md  Mantle_Organism_Lens.md  Mantle_Positioning.md  Mantle_Urge_System.md  Mantle_VCW_Tiers.md  Mantle_for_Engineers.md  Mantle_v3_Architecture.md  New_Commandments.txt  README.md
docs/grimoire/: GRIMOIRE_APPAI_DOMAIN_v1_0.md  README.md  THE_GRIMOIRE_CORE_v3_0.md  The Grimoire 4.1.md  The Grimoire 4.3.md  The Grimoire AppAI Chapter 4.1.md  The Grimoire AppAI Chapter 4.3.md
docs/v3/: Assimilation_Guide.md  Audit_Guide.md  Visual_Guide.md
doctrine/: New_Commandments.txt
documents/: ARCHITECTURE.md  FIELD_GUIDE.md  Mantle_Applet_Bodies.md  Mantle_Architecture.md  Mantle_Assimilator.md  Mantle_Doctrine.md  Mantle_Extensions.md  Mantle_LLM_Pitfalls.md  Mantle_Organ_Atlas.md  Mantle_Organism_Lens.md  Mantle_PRIMER.md  Mantle_Part1_Body.md  Mantle_Part1_Body_Audit.md  Mantle_Part2_Mind.md  Mantle_Part2_Mind_Audit.md  Mantle_Positioning.md  Mantle_Reproduction.md  Mantle_VCW_Tiers.md  Mantle_for_Engineers.md  New_Commandments.txt  PRIMER.md  REPRODUCTION.md
documents/grimoire/: README.md  The Grimoire 4.4.md  The Grimoire AppAI Chapter 4.4.md  The Grimoire AppAI Chapter.md  The Grimoire.md
documents/guides/: Assimilation_Guide.md  Audit_Guide.md  Organ_Contracts.md  Organism_Lifecycle.md  Resident_Runtime_Lessons.md  VCW_Guide.md  Visual_Guide.md
documents/refinement/: CHUNK_OPTIMIZATION_LEDGER.json  EXPERIMENTAL_REFINEMENT_MAP.md
examples/: Mantle_Live_Agent.html  Mantle_MacroDroid_Schema.yaml  Mantle_Reference_Agent.html  Mantle_Spreadsheet_Agent.html  README.md  phenotype_demo.py
examples/eggs/: calculator.json  greeter.json  shift_companion.json
examples/hermes-mantle-addon/: .gitignore  README.md  VENDOR_PROVENANCE.md  __init__.py  plugin.yaml  schemas.py  tools.py
examples/notepad_appai/: STAGE1_CERTIFICATION.md  index.html
examples/notepadnext_appai_lifecycle/: README.md
examples/sample_app/: README.md  notes_app.js  notes_app.py
examples/spore/: README.md
examples/spores/: README.md  make_spores.py
examples/tests/: calculator_appai_smoke.mjs  demo_smoke.mjs  live_agent_smoke.mjs  notepad_appai_smoke.mjs  package.json  test_multilang_parity.py
examples/vcw/: GUIDE.md  README.md  __main__.py  audit.py  audit_helpers.py  audit_mind.py  bench.py  boot.py  drivers.py  entry.py  examples_boot.py  examples_mind.py  interop.py  lineage.py  mind.py  redact.py  refs.py  skills.py  test_invariants.py  vcw_cube.py
examples/web_appai_shift_companion/: README.md  index.html
legacy/: CONTRIBUTING.md  Mantle_Assimilator.md  Mantle_Part1_Body.md  Mantle_Part1_Body_Audit.md  Mantle_Part2_Mind.md  Mantle_Part2_Mind_Audit.md  pyproject.toml
legacy/docs/: Mantle_Doctrine.md  Mantle_Extensions.md  Mantle_LLM_Pitfalls.md  Mantle_Organism_Lens.md  Mantle_v3_Architecture.md  (+1 more)
mantle/: __init__.py  __main__.py  anchor.py  cli.py  compiler.py  doctor.py  egg.py  face.py  ganglia.py  graft.py  hatchery.py  ingestion.py  lineage_cli.py  mem.py  symbiosis.py  teach.py  vault.py
mantle/vcw/: png.py  (+7 more)
vcw/: GUIDE.md  README.md  __main__.py  audit.py  body.py  drivers.py  examples.py  examples_mind.py  lineage.py  test_invariants.py  vcw_cube.py
(+207 files in other folders)
