# Mantle OS — project metadata.
#
# The core substrate (examples/vcw/) is intentionally PURE STANDARD LIBRARY: there are no runtime
# dependencies to install. This file exists to declare the project, pin a Python floor, and give
# tools a single place to read metadata from. It does not turn the demo into a pip-installable
# package (the modules are meant to be read and run in place, as the framework intends).

[project]
name = "mantle-os"
version = "3.0.0"
description = "Mantle OS v3: the Homeostatic AppAI Framework — grow software like a living organism, then give it a mind."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["ai", "framework", "llm", "agents", "organic-coding", "vcw", "mantle"]
authors = [{ name = "jodydugas-ctrl" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/jodydugas-ctrl/mantle-os"
Repository = "https://github.com/jodydugas-ctrl/mantle-os"
